--- a/spellcheckapp/templates/history.html
+++ b/spellcheckapp/templates/history.html
@@ -2,15 +2,15 @@
     <link rel="stylesheet" href='/static/style.css' />
     <body>
         {% if User == "admin" %}
-            <p>Hello {{ User }}</p>
-            <form action="{{url_for('history')}}" method="POST">
+            <p>{{ User }}'s queries</p>
+            <form action="{{url_for('history', user_name = User)}}" method="POST">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <p>Search a user's history:</p>
                 <input type="text" id=userquery name="username" placeholder="Username">
                 <input type="submit" value="Submit">
             </form>
         {% else %}
-            <p>Hello {{ User }}</p>
+            <p>{{ User }}'s queries</p>
         {% endif %}
         <p>Number of queries made on this account:</p>
         <p id=numqueries>{{ queries|length }}</p>
